<resources>
    <string name="app_name">红包快来</string>
    <string name="app_description">微信红包\n注意\n\t\t\t\t延迟时间过长可能导致红包被抢完\n\t\t\t\t忽略字段过多可能导致效率降低\n\t\t\t\t关闭监控聊天窗口将不能自动点击红包</string>
    <string name="app_description_alipay">支付宝红包</string>
    <string name="app_description_qq">QQ红包</string>
    <string name="set_wechat">插件设置(微信)</string>
    <string name="set_qq">插件设置(QQ)</string>
    <string name="look_xiu">咻一咻</string>
    <string name="look_xiu_description">开启后，进入咻一咻界面自动点击</string>
    <string name="look_list">监控聊天列表</string>
    <string name="look_notification">监控通知信息</string>
    <string name="look_chat">监控聊天窗口</string>
    <string name="not_match">红包包含以下字段则不抢(多个字段以\',\'分开)</string>
    <string name="look_list_description">监控聊天列表,当有新红包时，自动进入聊天</string>
    <string name="look_notification_description">监控通知信息，当有红包通知，自动进入微信</string>
    <string name="look_chat_description">监控聊天窗口，当有红包信息，自动打开红包</string>
    <string name="delay">延迟时间(ms)</string>
    <string name="service_open">开启插件</string>
    <string name="service_off">关闭插件</string>
    <string name="defense">防御模式</string>
    <string name="probability">概率抢(1-10)</string>
    <string name="about">关于</string>
    <string name="adv">应用推荐</string>
    <string name="defense_description">避免有人暴力破外挂导致外挂失效</string>
    <string name="url">https://github.com/tttony3/WeChatHongBao</string>
    <string name="default_0">0</string>
    <string name="default_10">10</string>
    <string name="description">\t\t点击按钮，进入辅助功能，选择开启本插件(红包快来)即可自动抢红包\n\n\t\t注意\n\t\t延迟时间过长可能导致红包被抢完(max:1000)
        \n\t\t忽略字段过多可能导致效率降低\n\t\t关闭监控聊天窗口将不能自动点击红包\n\t\t开启防御模式可能漏领发送时间太近的红包</string>
    <string name="declaration">\t\t插件可能会在一定程度上改变微信的交互方式。\n\n\t\t使用本工具时，使用者自行承担随之而来的各种风险，包括但不限于“禁用红包功能”、“微信封号”。
     \n\n\t\t1.自动检测红包，当红包来了自动进入微信进行点击(需要在解锁亮屏状态下)
 \n\t\t2.自定义 监控系统通知，微信聊天列表，微信聊天等三个界面，用户根据自己需要进行设置
 \n\t\t3.自定义抢红包延迟时间，避免太快点击而被微信服务器封号（我猜有可能）
 \n\t\t4.自定义忽略字段，例如实现不抢如 ：XX专属 等红包，避免被人发现用挂
 \n\t\t5.防御模式，间隔抓取，防止被人暴力破外挂，例如不断发送[微信红包]XXX
     \n\t\t6.概率抢，设定抢红包概率，避免每个红包全抢，减小嫌疑</string>

</resources>
