<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tl.wechathongbao.MainActivity">

    <LinearLayout
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/set"
            android:textSize="@dimen/title_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3F51B5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tittle"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="5dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <TextView
                android:id="@+id/tv_look1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/look_notification"
                android:textSize="@dimen/normal_text" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/SwitchButton_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                app:kswFadeBack="true" />
            <TextView
                android:layout_marginStart="@dimen/description_margin"
                android:layout_marginEnd="@dimen/description_margin"
                android:layout_below="@+id/SwitchButton_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look_notification_description"
                 />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/look_list"
                android:textSize="@dimen/normal_text" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/SwitchButton_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                app:kswFadeBack="true" />
            <TextView
                android:layout_below="@+id/SwitchButton_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/description_margin"
                android:layout_marginEnd="@dimen/description_margin"
                android:text="@string/look_list_description"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/look_chat"
                android:textSize="@dimen/normal_text" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/SwitchButton_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                app:kswFadeBack="true" />
            <TextView
                android:layout_below="@+id/SwitchButton_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/description_margin"
                android:layout_marginEnd="@dimen/description_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/look_chat_description"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/defense"
                android:textSize="@dimen/normal_text" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/SwitchButton_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                app:kswFadeBack="true" />
            <TextView
                android:layout_below="@+id/SwitchButton_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/description_margin"
                android:layout_marginEnd="@dimen/description_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/defense_description"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"

            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#3F51B5" />
    </LinearLayout>
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@id/content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_marginBottom="5dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:id="@+id/delay_tv"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                android:text="@string/delay"/>
            <EditText
                android:textAlignment="center"
                android:hint="@string/default_0"
                android:id="@+id/ed_delay"
                android:layout_toEndOf="@+id/delay_tv"
                android:layout_marginStart="@dimen/description_margin"
                android:layout_marginEnd="@dimen/description_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_alignBaseline="@+id/delay_tv"
                android:textSize="@dimen/normal_text"
                />
        </RelativeLayout>

        <TextView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:text="@string/not_match"/>
        <EditText
            android:id="@+id/ed_field"
            android:maxLines="2"
            android:ems="14"
            android:layout_marginStart="@dimen/description_margin"
            android:layout_marginEnd="@dimen/description_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="#eaeaea"
            android:text="开启插件"
            android:background="@drawable/btn_selector"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:text="@string/url"/>

    </LinearLayout>

</RelativeLayout>
</ScrollView>