<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.tl.wechathongbao.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_look1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/look_notification"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/subhead" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/SwitchButton_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/switchbutton_margin"
                    android:checked="true"
                    app:kswFadeBack="true" />

                <TextView
                    android:id="@+id/desc_notofication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SwitchButton_notification"
                    android:layout_marginEnd="@dimen/description_margin"
                    android:layout_marginStart="@dimen/description_margin"
                    android:text="@string/look_notification_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/body" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/desc_notofication"
                    android:layout_marginTop="5dp"
                    android:background="@color/dividerColor" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/look_list"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/subhead" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/SwitchButton_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/switchbutton_margin"
                    android:checked="true"
                    app:kswFadeBack="true" />

                <TextView
                    android:id="@+id/desc_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SwitchButton_list"
                    android:layout_marginEnd="@dimen/description_margin"
                    android:layout_marginStart="@dimen/description_margin"
                    android:text="@string/look_list_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/body" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/desc_list"
                    android:layout_marginTop="5dp"
                    android:background="@color/dividerColor" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/look_chat"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/subhead" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/SwitchButton_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/switchbutton_margin"
                    android:checked="true"
                    app:kswFadeBack="true" />

                <TextView
                    android:id="@+id/desc_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SwitchButton_chat"

                    android:layout_marginEnd="@dimen/description_margin"
                    android:layout_marginStart="@dimen/description_margin"
                    android:text="@string/look_chat_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/body" />

                <View
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/desc_chat"

                    android:background="@color/dividerColor" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/defense"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/subhead" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/SwitchButton_defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/switchbutton_margin"
                    android:checked="true"
                    app:kswFadeBack="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SwitchButton_defense"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="@dimen/description_margin"
                    android:layout_marginStart="@dimen/description_margin"
                    android:text="@string/defense_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/body" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"

                android:layout_height="1dp"

                android:background="@color/dividerColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content1"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"

                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/delay_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:ems="6"
                    android:text="@string/delay"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/subhead" />

                <EditText
                    android:id="@+id/ed_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/delay_tv"
                    android:layout_marginEnd="@dimen/description_margin"
                    android:layout_marginStart="@dimen/description_margin"
                    android:layout_toEndOf="@+id/delay_tv"
                    android:ems="3"
                    android:hint="@string/default_0"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="@dimen/subhead" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/probability_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:ems="6"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/probability"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/subhead" />

                <EditText
                    android:id="@+id/ed_probability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/probability_tv"
                    android:layout_marginEnd="@dimen/description_margin"
                    android:layout_marginStart="@dimen/description_margin"
                    android:layout_toEndOf="@+id/probability_tv"
                    android:ems="3"
                    android:hint="@string/default_10"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="@dimen/subhead" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/not_match"
                android:textColor="@color/mainTextColor"
                android:textSize="@dimen/subhead" />

            <EditText
                android:id="@+id/ed_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/description_margin"
                android:layout_marginStart="@dimen/description_margin"
                android:ems="14"
                android:hint=""
                android:maxLines="2"

                />

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_selector"
                android:text="开启插件"
                android:textColor="#eaeaea" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/description"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@string/url" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>